--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,212 @@
-.App {
+html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}article,aside,footer,header,nav,section{display:block}h1{font-size:2em;margin:.67em 0}figcaption,figure,main{display:block}figure{margin:1em 40px}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent;-webkit-text-decoration-skip:objects}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:inherit}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}dfn{font-style:italic}mark{background-color:#ff0;color:#000}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}audio,video{display:inline-block}audio:not([controls]){display:none;height:0}img{border-style:none}svg:not(:root){overflow:hidden}button,input,optgroup,select,textarea{font-family:sans-serif;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}button,html [type=button],[type=reset],[type=submit]{-webkit-appearance:button}button::-moz-focus-inner,[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner{border-style:none;padding:0}button:-moz-focusring,[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{display:inline-block;vertical-align:baseline}textarea{overflow:auto}[type=checkbox],[type=radio]{box-sizing:border-box;padding:0}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-cancel-button,[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details,menu{display:block}summary{display:list-item}canvas{display:inline-block}template{display:none}[hidden]{display:none}
+
+html { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;}
+
+*, *:before, *:after {box-sizing: inherit}
+
+.sr-only { position: absolute; width: 1px; height: 1px; margin: -1px; border: 0; padding: 0; white-space: nowrap; clip-path: inset(100%); clip: rect(0 0 0 0); overflow: hidden;}
+
+/* MAKE SURE TO REMOVE CLEAR FIX AND SR IF NOT IN USE */
+
+@import url('https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@0,400;0,500;0,600;1,500&display=swap');
+
+/* GENERAL */
+
+html {
+    font-size: 62.5%;
+    scroll-behavior: smooth;
+}
+
+body {
+  font-size: 2rem;
+  font-family: 'Alegreya', serif;
+}
+
+h1,h2,h3,h4 {
+  margin: 0;
+}
+
+button {
+  background-color: white;
+  padding: 1rem 2rem;
+  font-weight: bold;
+  cursor: pointer;
+  border-right: 0.3rem solid black;
+  border-left: 0.3rem solid black;
+  border-bottom: 0.3rem solid black;
+  border-top: none;
+  font-family: 'Newsreader', serif;
+  font-size: 2.25rem;
+}
+
+button:hover {
+  color: white;
+  background-color: black;
+  transition: 0.3s all ease;
+}
+
+.wrapper {
+  margin: 0 auto;
+  width: 97.5%;
+  max-width: 1680px;
+}
+
+img {
+  display: block;
+  height: auto;
+  width: 100%;
+  height: 350px;
+  object-fit: cover;
+}
+
+h2 {
+  font-size: calc(2rem + 0.75vw);
+}
+
+a {
+  font-weight: bold;
+  color:black;
+  padding: 1rem;
+}
+
+a:hover,
+a:focus {
+  background-color: black;
+  color: white;
+  padding: 1rem;
+  transition: 0.3s all ease;
+}
+
+/* HEADER */
+
+header {
+  text-align: center;
+  padding: calc(1.5rem + 1vw) 0 calc(2.5rem + 1vw);
+  border-bottom: 0.3rem solid black;
+  font-family: 'Newsreader', serif;
+}
+
+header h4 {
+  font-size: calc(1rem + 0.5vw);
+  font-style: italic;
+}
+
+h1 {
+  font-size: calc(5rem + 3vw);
+  width: 97.5%;
+  font-family: 'Newsreader', serif;
+}
+
+/* ARTICLES */
+
+.articles {
+  display: grid;
+  grid-template-columns: 33.33% 33.33% 33.33%;
+  grid-template-rows: auto;
+  text-align: left;
+  list-style-type: none;
+  padding: 0;
+  width: calc(100vw - 25vw - 15rem);
+}
+
+.articles li h2 {
+  padding: 1rem 0;
+}
+
+.articles h3 {
+  grid-column-start: 1;
+  grid-column-end: 4;
+  text-align: center;
+  font-size: calc(2rem + 1.5vw);
+  padding: 0.5vw 0 1.5vw;
+}
+
+.articles li {
+  border: 0.5rem double black;
+  padding: 1rem 1rem;
+  margin: 0.5rem 0.5rem;
+  display: flex;
+  flex-wrap: wrap;
+  align-content: space-between;
+}
+
+.articles li a {
+  margin-top: 2rem;
+  width: 15rem;
+}
+
+.articles p {
+  text-align: left;
+  font-size: 2rem;
+  margin: 1rem 0;
+}
+
+.articles span,
+.trendingContainer p:first-of-type  {
+  font-style: italic;
+}
+
+.buttonContainer {
+  display: flex;
+  flex-direction: column;
+  position: sticky;
+  top: 2rem;
+  margin-right: 1vw;
+  height: 100%;
+  background-color: black;
+  width: 15rem;
+}
+
+.buttonContainer a {
+  color: white;
+  text-align: center;
+  text-decoration: none;
+}
+
+.buttonContainer h4,
+.trending h4 {
+  color: white;
+  text-align: center;
+  padding: calc(0.75rem + 0.5vw) 0;
+  background-color: black;
+}
+
+.trending h4 {
+  text-transform: uppercase;
+}
+
+.mainSectionContainer {
+  display: flex;
+  height: 100%
+}
+
+.trending {
+  position: sticky;
+  top: 2rem;
+  margin-left:1vw;
+  height: 100%;
+  width: 20vw;
+}
+
+.trendingContainer {
+  border: 0.3rem solid black;
+  padding: 2rem 1.5vw;
+  /* margin-top: 2rem; */
+}
+
+.anchorTrending {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@media (max-width: 1300px) {
+  
+  .articles {
+  grid-template-columns: 50% 50%;
   }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  .articles h3 {
+    grid-column-end: 3;
   }
-  to {
-    transform: rotate(360deg);
-  }
+
 }
