--- a/src/App.css
+++ b/src/App.css
@@ -106,7 +106,7 @@ h1 {
   text-align: left;
   list-style-type: none;
   padding: 0;
-  width: calc(100vw - 25vw - 15rem);
+  width: calc(100vw - 22.5vw - (calc(12rem + 3vw)));
 }
 
 .articles li h2 {
@@ -129,11 +129,10 @@ h1 {
   flex-wrap: wrap;
   align-content: space-between;
 }
-
+/* 
 .articles li a {
-  margin-top: 2rem;
   width: 15rem;
-}
+} */
 
 .articles p {
   text-align: left;
@@ -154,7 +153,7 @@ h1 {
   margin-right: 1vw;
   height: 100%;
   background-color: black;
-  width: 15rem;
+  width: calc(12rem + 3vw);
 }
 
 .buttonContainer a {
@@ -169,6 +168,7 @@ h1 {
   text-align: center;
   padding: calc(0.75rem + 0.5vw) 0;
   background-color: black;
+  text-transform: uppercase;
 }
 
 .trending h4 {
@@ -185,19 +185,40 @@ h1 {
   top: 2rem;
   margin-left:1vw;
   height: 100%;
-  width: 20vw;
+  width: 22.5vw;
 }
 
 .trendingContainer {
   border: 0.3rem solid black;
   padding: 2rem 1.5vw;
-  /* margin-top: 2rem; */
+}
+
+.trending img {
+  height: auto;
 }
 
 .anchorTrending {
   text-align: center;
 }
 
+.trendingButtons {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  border-right: 0.3rem solid black;
+  border-left: 0.3rem solid black;
+}
+
+.trendingButtons button {
+  flex-grow: 1;
+  font-size: 2rem;
+  padding: 1rem 2rem;
+  font-weight: bold;
+  cursor: pointer;
+  border: none;
+  font-family: 'Newsreader', serif;
+  font-size: 2.25rem;
+}
 
 @media (max-width: 1300px) {
   
@@ -207,6 +228,18 @@ h1 {
 
   .articles h3 {
     grid-column-end: 3;
+  }
+
+}
+
+@media (max-width: 800px) {
+  
+  .articles {
+  grid-template-columns: 100%;
+  }
+
+  .articles h3 {
+    grid-column-end: 2;
   }
 
 }
