--- a/src/App.css
+++ b/src/App.css
@@ -37,6 +37,20 @@ button {
   font-size: 2rem;
 }
 
+footer p {
+  background-color: black;
+  color: white;
+  text-align: center;
+  padding: 1.5rem;
+  margin: 0;
+  font-size: 1.8rem;
+}
+
+footer a {
+  color: white;
+  text-decoration: none;
+}
+
 button:hover {
   color: #ffffff;
   background-color: #666666;
