--- a/src/App.css
+++ b/src/App.css
@@ -43,7 +43,7 @@ footer p {
   text-align: center;
   padding: 1.5rem;
   margin: 0;
-  font-size: 1.5rem;
+  font-size: calc(1.2rem + 0.25vw)
 }
 
 footer a {
@@ -143,6 +143,10 @@ h1 {
   display: flex;
   flex-wrap: wrap;
   align-content: space-between;
+}
+
+.articles p {
+  width: 100%;
 }
 
 .articles a {
@@ -417,7 +421,7 @@ h1 {
 
   .trendingButtons button:hover {
     color: #666666;
-    background-color: unset;
+    background-color: white;
     text-decoration: underline;
   }
 
